center image on small screen, fix grid row

--- a/css/fluid-grid.css
+++ b/css/fluid-grid.css
@@ -35,7 +35,6 @@ html { font-size: 100%; }
 }
 .fluid-container .row {
   *zoom: 1;
-  width: 100%;
   margin-right: -1rem;
   margin-left: -1rem;
 }
